--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 <body>
 	<h1>Shopping List</h1>
 	<p id="first">Get it done today</p>
-	<input id="userinput" type="text" placeholder="enter items">
-	<button id="enter">Enter</button>
+	<h2>Hint:How it works?</h2>
+	<p>1. You can add items to list by click "to cart" button or just press "enter" right after keying in a new item.</p>
+	<p>2. You can't add items if you don't type any letter in the text box.</p>
+	<input id="userinput" type="text" placeholder="What do you need?">
+	<button id="enter">to cart</button>
 	<ul>
 		<li class="bold red" random="23">Notebook</li>
 		<li>Jello</li>
