--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 		<h1>A Shopping List</h1>
 		<p id="first">Get it done today</p>
 		<h2>How it works?</h2>
-		<p>1. You can add items to list by click "to cart" button or just press "enter" right after keying in a new item.</p>
+		<p>1. You can add items to list by click "add to list" button or just press "enter" right after keying in a new item.</p>
 		<p>2. You can't add items if you don't type any letter in the text box.</p>
 		<p>3. After item is added, you can delete it by click the "-" button.</p>
+		<p>4. Click item to check if bought.</p>
 		<input id="userinput" type="text" placeholder="What do you need?">
 		<button id="enter">add to list</button>
 		<ul>
